# refscancsm

./: .gitignore  LICENSE  README.md  examples.py  main.py  pyproject.toml  refscan_to_csm.py  test.py
.github/: copilot-instructions.md
.github/instructions/: gpu-optimization.instructions.md
src/coilsurvey_cpx_to_csm/: __init__.py  cli.py  interpolation.py  read_cpx.py  read_sin.py  reader.py  transforms.py  workflow.py
src/refscancsm/: __init__.py  cli.py  espirit.py  get_csm.py  interp.py  parse_cpx.py  parse_sin.py  utils.py  walsh.py
