[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refscancsm"
version = "0.1.0"
description = "Tool for reading CPX files and converting coil survey data to CSM format"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["cpx", "csm", "coil-survey", "mri", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=2.4.1",
    "scipy>=1.11.0",
]

[project.scripts]
refscan2csm = "refscancsm.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/refscancsm"
Repository = "https://github.com/yourusername/refscancsm"

[tool.hatch.build.targets.wheel]
packages = ["src/refscancsm"]
