[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refscancsm"
version = "0.2.1"
description = "ESPIRiT-based MRI coil sensitivity mapping from Philips SENSE refscan data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["cpx", "csm", "coil-survey", "mri", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "espirit>=0.1.1",
    "numpy>=2.4.1",
    "scipy>=1.11.0",
    "torch>=2.0.0,<2.5.0",
    "tqdm>=4.67.3",
]

# PyTorch 2.4.x on PyPI ships CUDA 12.1 binaries (nvidia-*-cu12>=12.1.*).
# CUDA 12.1 requires driver ≥525; this machine has driver 535 so it works.
# PyTorch 2.5+ uses CUDA 12.4 (needs driver ≥550) and 2.6+ uses CUDA 13 —
# both incompatible with driver 535.  Raise the upper bound once the driver
# is updated.

[project.scripts]
get_csm = "refscancsm.cli:main"

[project.urls]
Homepage = "https://github.com/oscarvanderheide/refscancsm"
Repository = "https://github.com/oscarvanderheide/refscancsm"

[tool.hatch.build.targets.wheel]
packages = ["src/refscancsm"]

[dependency-groups]
dev = [
    "arrayview>=0.5.1",
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
